--- a/static/index.html
+++ b/static/index.html
@@ -24,10 +24,10 @@
     <script src="antixss.js" type="text/javascript"></script>
 
     <script>
-        $( document ).ready(function() {
-            $.i18n().load( {
+        $(document).ready(function() {
+            $.i18n().load({
                 en: {
-                    "welcome": "Welcome.",
+                    "welcome": "Welcome!",
                     "name": "name",
                     "what_is_your_name": "What is your name?",
                     "hello": "Hello $1",
@@ -42,17 +42,18 @@
                     "added_to_database": "こんにちは $1 さん、あなたをデータベースに追加しました。",
                     "database_contents": "データベースの内容: "
                 }
-            } );
+            });
             $('body').i18n();
-            $('#user_name').attr("placeholder", $.i18n('name') );
+            $('#user_name').attr("placeholder", $.i18n('name'));
         });
-        </script>
+    </script>
 
 </head>
 
 <body>
     <div class="container" id="container">
-        <h1 data-i18n="welcome"></h1> <!- Welcome ->
+        <h1 data-i18n="welcome"></h1>
+        <!- Welcome ->
         <div id="nameInput" class="input-group-lg center-block helloInput">
             <p class="lead" data-i18n="what_is_your_name"></p>
             <input id="user_name" type="text" class="form-control" aria-describedby="sizing-addon1" value="" />
@@ -74,48 +75,47 @@
 
 
 <script>
-    	//Submit data when enter key is pressed
-        $('#user_name').keydown(function(e) {
-        	var name = $('#user_name').val();
-            if (e.which == 13 && name.length > 0) { //catch Enter key
-            	//POST request to API to create a new visitor entry in the database
-                $.ajax({
-				  method: "POST",
-				  url: "./api/visitors",
-				  contentType: "application/json",
-				  data: JSON.stringify({name: name })
-				})
+    //Submit data when enter key is pressed
+    $('#user_name').keydown(function(e) {
+        var name = $('#user_name').val();
+        if (e.which == 13 && name.length > 0) { //catch Enter key
+            //POST request to API to create a new visitor entry in the database
+            $.ajax({
+                    method: "POST",
+                    url: "./api/visitors",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        name: name
+                    })
+                })
                 .done(function(data) {
-                    if(data && data.name){
-                        if(data._id)
+                    if (data && data.name) {
+                        if (data._id)
                             $('#response').html($.i18n('added_to_database', AntiXSS.sanitizeInput(data.name)));
                         else
-                            $('#response').html($.i18n('hello', AntiXSS.sanitizeInput(data.name))); 
-                    }
-                    else {
+                            $('#response').html($.i18n('hello', AntiXSS.sanitizeInput(data.name)));
+                    } else {
                         $('#response').html(AntiXSS.sanitizeInput(data));
                     }
                     $('#nameInput').hide();
                     getNames();
                 });
-            }
-        });
+        }
+    });
 
-        //Retrieve all the visitors from the database
-        function getNames(){
-          $.get("./api/visitors")
-              .done(function(data) {
-                  if(data.length > 0) {
+    //Retrieve all the visitors from the database
+    function getNames() {
+        $.get("./api/visitors")
+            .done(function(data) {
+                if (data.length > 0) {
                     data.forEach(function(element, index) {
-                      data[index] = AntiXSS.sanitizeInput(element)
+                        data[index] = AntiXSS.sanitizeInput(element)
                     });
                     $('#databaseNames').html($.i18n('database_contents') + JSON.stringify(data));
-                  }
-              });
-          }
+                }
+            });
+    }
 
-          //Call getNames on page load.
-          getNames();
-
-
-    </script>
+    //Call getNames on page load.
+    getNames();
+</script>
